--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,7 @@ jobs:
       - run: npm install
 
       - name: Run the script
-        run: node index.js
+        run: node selector.js
 
       - name: Send Email
         run: node sendEmail.js
