--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "nodemailer": "^6.9.14",
     "puppeteer": "^23.1.0",
     "random-useragent": "^0.5.0",
     "xlsx": "^0.18.5"
