--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,10 +20,19 @@ jobs:
       - name: Install dependencies
         run: |
           npm install
-          npm install puppeteer # Ensure Puppeteer and its Chromium binary are installed
+          npm install puppeteer-core
+
+      - name: Install Chromium
+        run: |
+          wget https://github.com/adieuadieu/browser/releases/download/v3.0.0/chrome-linux64.zip
+          unzip chrome-linux64.zip
+          mv chrome-linux64 /usr/local/chrome
 
       - name: Run the script
-        run: node index.js
+        run: |
+          node index.js
+        env:
+          CHROME_EXECUTABLE_PATH: /usr/local/chrome/chrome
 
       - name: Send Email
         run: node sendEmail.js
