--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,14 +26,13 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y wget unzip
-          wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
-          sudo apt-get install -y ./google-chrome-stable_current_amd64.deb
+          sudo apt-get install -y chromium-browser
 
       - name: Run the script
         run: |
           node index.js
         env:
-          CHROME_EXECUTABLE_PATH: /usr/bin/google-chrome-stable
+          CHROME_EXECUTABLE_PATH: /usr/bin/chromium-browser
 
       - name: Send Email
         run: node sendEmail.js
