--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,13 +25,13 @@ jobs:
       - name: Install Chromium
         run: |
           sudo apt-get update
-          sudo apt-get install -y wget unzip chromium
+          sudo apt-get install -y wget unzip chromium-browser
 
       - name: Run the script
         run: |
           node index.js
         env:
-          CHROME_EXECUTABLE_PATH: /usr/bin/chromium
+          CHROME_EXECUTABLE_PATH: /usr/bin/chromium-browser
 
       - name: Send Email
         run: node sendEmail.js
