--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,9 @@ name: Daily Job Scraper
 
 on:
   schedule:
-    - cron: "0 7 * * *" # Runs every day at 7:00 AM UTC
+    - cron: "30 1 * * 0" # Sunday at 1:30 AM UTC (7:00 AM IST)
+    - cron: "30 1 * * 3" # Wednesday at 1:30 AM UTC (7:00 AM IST)
+    - cron: "30 1 * * 5" # Friday at 1:30 AM UTC (7:00 AM IST)
   workflow_dispatch: # Allows manual trigger
 
 jobs:
