--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -11,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "nodemailer": "^6.9.14",
+    "p-limit": "^6.1.0",
     "puppeteer": "^23.1.0",
     "random-useragent": "^0.5.0",
     "xlsx": "^0.18.5"
