--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v3
 
       - name: Set up Node.js
         uses: actions/setup-node@v3
@@ -27,27 +28,32 @@ jobs:
       - name: Install Chromium
         run: |
           sudo apt-get update
-          sudo apt-get install -y wget unzip
-          wget https://github.com/adoptopenjdk/openjdk11-binaries/releases/download/jdk-11.0.10%2B9/OpenJDK11U-jdk_x64_linux_hotspot_11.0.10_9.tar.gz
-          tar -xvf OpenJDK11U-jdk_x64_linux_hotspot_11.0.10_9.tar.gz
-          sudo mv jdk-11.0.10+9 /usr/lib/jvm/
-          sudo update-alternatives --install /usr/bin/java java /usr/lib/jvm/jdk-11.0.10+9/bin/java 1
-          sudo update-alternatives --install /usr/bin/javac javac /usr/lib/jvm/jdk-11.0.10+9/bin/javac 1
-          sudo apt-get install -y chromium-browser
+          sudo apt-get install -y wget unzip chromium-browser
 
       - name: Run the script
+        id: scrape
         run: |
           node index.js
         env:
           CHROME_EXECUTABLE_PATH: /usr/bin/chromium-browser
+        continue-on-error: true # Continue even if the script fails
 
       - name: Send Email
-        run: node sendEmail.js
+        id: send-email
+        run: |
+          node sendEmail.js
         env:
           EMAIL_USER: ${{ secrets.EMAIL_USER }}
           EMAIL_PASS: ${{ secrets.EMAIL_PASS }}
           RECIPIENT_EMAIL: ${{ secrets.RECIPIENT_EMAIL }}
+        continue-on-error: true # Continue even if sending email fails
 
       - name: Clean up
         run: |
-          rm -f jobs.xlsx
+          rm -f jobs.xlsx || echo "No jobs.xlsx file to delete"
+        if: always() # Ensure this step runs regardless of previous step results
+
+      - name: Notify if Script Failed
+        if: failure() # Only run if the previous steps failed
+        run: |
+          echo "Script failed or email could not be sent. Check the logs for details."
